# jchess_engine2

./: .gitignore  CMakeLists.txt  README.md  chess_ugh.txt  communicate_engine.py  compare_stockfish.py  nnue.txt  opening_book.txt  perft_config.json  requirements.txt  uci.txt
bot/: Dockerfile  compose.yml  config.yml
data/: feature_flags.cfg
src/: main.cpp
src/jchess/: bitboard.cpp  bitboard.h  board.cpp  board.h  board_state.cpp  board_state.h  core.cpp  core.h  engine.cpp  engine.h  eval.cpp  eval.h  magic_bitboard.cpp  magic_bitboard.h  movegen.cpp  movegen.h  moves.cpp  moves.h  search.cpp  search.h  search_limits.cpp  search_limits.h  temp_eval.cpp  temp_eval.h  uci.cpp  uci.h
src/jchess/nnue/: wrap_nnue.cpp  wrap_nnue.h
src/jchess/polyglot/: pg_reader.cpp  pg_reader.h
src/jchess/syzygy/: sz_wrapper.cpp  sz_wrapper.h
src/misc/: bishop_magics.txt  magic_finder.c  rook_magics.txt  zobrist_constant_gen.cpp  zobrist_consts.txt
src/uci/: CommandParser.cpp  CommandParser.h  fen.cpp  fen.h  uci.cpp  uci.h  utils.cpp  utils.h
tables/: transfer.py  urls.txt
test/: bitboard.cpp  board.cpp  core.cpp  engine.cpp  magic.cpp  movegen.cpp  nnue.cpp  perft.cpp  perft2.cpp  polyglot_util.cpp  search.cpp  search_stress.cpp  search_time.cpp  syzgy.cpp
